fixed button border, background and spacing of buttons, fixed background from spreading to other posts when read is activated

--- a/linkedlist.css
+++ b/linkedlist.css
@@ -12,7 +12,7 @@ main {
   text-align: center;
 }
 
-header{
+header {
   /*padding: 3vh;*/
   color: #FFFFFF;
   font-weight: 700;
@@ -21,6 +21,25 @@ header{
   height: 5vh;
   width: 100vw;
   padding-top: 3vh;
+}
+
+button {
+  border: none;
+  border-bottom: 2px solid #F2F4F4;
+  background-color: #FFFFFF;
+  font-family: 'Open Sans';
+  font-weight: 400;
+  font-size: 90%;
+  color: #455A64;
+  outline: none;
+}
+
+button:hover {
+  border: none;
+  border-bottom: 2px solid #FFC107;
+  background-color: #FFFFFF;
+  font-family: 'Open Sans';
+  font-weight: 700;
 }
 
 .input {
@@ -66,6 +85,7 @@ header{
   background-color: #ffffff;
   margin-bottom: 4%;
   margin-left: 5%;
+  padding-bottom: 2%;
 }
 
 .title {
@@ -88,8 +108,21 @@ header{
 }
 
 .read {
-  margin: 0% 58% 0% 4%;
+  margin: 0% 63% 0% 4%;
+  padding: 0;
+  background-color: #0000;
 }
+
+.delete {
+  padding: 0;
+  background:  transparent;
+}
+
+button.active {
+  background-color: #F2F4F4;
+  outline: none;
+}
+
 .active {
   color: #F05A28;
 }
